--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 project(reknote)
 cmake_minimum_required(VERSION 2.8.12)
-find_package(Qt4 REQUIRED)
-include(${QT_USE_FILE})
+find_package(Qt5Core)
+find_package(Qt5Widgets)
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 
@@ -13,9 +14,9 @@ set(reknote_SRCS
 SET(reknote_FORMS
   ui/reknote.ui
 )
-QT4_WRAP_UI(reknote_FORMS_HDRS ${reknote_FORMS})
+QT5_WRAP_UI(reknote_FORMS_HDRS ${reknote_FORMS})
 
 add_executable(reknote ${reknote_SRCS} 
 		       ${reknote_FORMS_HDRS})
-target_link_libraries(reknote ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+target_link_libraries(reknote ${QT_QTCORE_LIBRARY} Qt5::Widgets)
 install(TARGETS reknote RUNTIME DESTINATION bin)
