moved again because i am bad at naming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ set(CMAKE_AUTOMOC ON)
 
 
 set(reknote_SRCS 
-  spikesmodel.cpp 
+  spike.cpp 
+  spikestreemodel.cpp 
   reknote.cpp 
   main.cpp
 )
