src into subdir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,16 @@ find_package(Libgit2 REQUIRED)
 include_directories(${LIBGIT2_INCLUDE_DIR})
 
 set(reknote_SRCS 
-  gitcommit.cpp
-  gitrepository.cpp
-  historydialog.cpp
-  noteitemdelegate.cpp
-  notecommands.cpp
-  noteview.cpp 
-  spike.cpp 
-  spikestreemodel.cpp 
-  reknote.cpp 
-  main.cpp
+  src/gitcommit.cpp
+  src/gitrepository.cpp
+  src/historydialog.cpp
+  src/noteitemdelegate.cpp
+  src/notecommands.cpp
+  src/noteview.cpp 
+  src/spike.cpp 
+  src/spikestreemodel.cpp 
+  src/reknote.cpp 
+  src/main.cpp
 )
 SET(reknote_FORMS
   ui/history.ui
